--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,25 @@
 <resources>
     <string name="app_name">Pico Full</string>
-    <string name="settings">设置</string>
-    <string name="video">媒体视频</string>
-    <string name="about">设备信息</string>
+    <string name="settings">Settings</string>
+    <string name="video">Video</string>
+    <string name="about">About Device</string>
     <string name="energy">%1$d /cm²</string>
     <string name="hz">%1$d Hz</string>
-    <string name="pulse">脉冲数&#160;&#160; %1$d</string>
-    <string name="spot">光斑尺寸   %1$d mm</string>
+    <string name="pulse">Pulse &#160;&#160; %1$d</string>
+    <string name="spot">Spot size   %1$d mm</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="energy_density">能量密度</string>
-    <string name="rate">频率</string>
-    <string name="off">关闭</string>
-    <string name="aod">常亮</string>
-    <string name="flash">闪烁</string>
+    <string name="energy_density">Energy</string>
+    <string name="rate">Rate</string>
+    <string name="off">Off</string>
+    <string name="aod">Always on</string>
+    <string name="flash">Flashing</string>
+    <string name="language">Language</string>
+    <string name="chinese">Chinese</string>
+    <string name="english">English</string>
+    <string name="French">French</string>
+    <string name="spanish">Spanish</string>
+    <string name="volume">Volume</string>
+    <string name="buzz">Buzz</string>
+    <string name="red_light">Red light intensity</string>
 </resources>
