--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="volume">Volume</string>
     <string name="buzz">Buzz</string>
     <string name="red_light">Red light intensity</string>
+    <string name="device_model">Device model     PICO_LASER</string>
+    <string name="device_name">设备名称     皮秒激光器</string>
+    <string name="production_date">Production Date</string>
+    <string name="version">Version</string>
 </resources>
