--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -27,4 +27,5 @@
     <string name="device_name">设备名称     皮秒激光器</string>
     <string name="production_date">Production Date</string>
     <string name="version">Version</string>
+    <string name="input">input</string>
 </resources>
