--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -24,4 +24,7 @@
     <string name="red_light">红光强度</string>
     <string name="device_model">设备型号     PICO_LASER</string>
     <string name="device_name">设备名称     皮秒激光器</string>
+    <string name="production_date">出厂日期</string>
+    <string name="version">软件版本</string>
+    <string name="input">输入</string>
 </resources>
