--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -27,4 +27,19 @@
     <string name="production_date">出厂日期</string>
     <string name="version">软件版本</string>
     <string name="input">输入</string>
+    <string name="backstage">后台</string>
+    <string name="exit_tips">退出</string>
+    <string name="exit_msg">确定退出程序?</string>
+    <string name="ok">确定</string>
+    <string name="cancel">取消</string>
+    <string name="password_error">密码错误</string>
+    <string name="password_tips">请输入4位密码</string>
+    <string name="sum">总数</string>
+    <string name="clear">清除</string>
+    <string name="login">登入</string>
+    <string name="open">开启</string>
+    <string name="close">关闭</string>
+    <string name="energy_bg">能量</string>
+    <string name="voltage">电压</string>
+    <string name="energy_value">%1$d</string>
 </resources>
