--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Pico Full</string>
     <string name="settings">Paramètres</string>
     <string name="video">Vidéo</string>
     <string name="about">À propos</string>
@@ -52,4 +51,7 @@
     <string name="xenon_alert">氙灯文火失败，请重启！！！</string>
     <string name="flow_alert">水流错误</string>
     <string name="power_alert">激光电源故障，请重启！！！</string>
+    <string name="input_serial">输入串口</string>
+    <string name="input_password">请输入密码</string>
+    <string name="password_err">密码错误</string>
 </resources>
