--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Pico Full</string>
+
     <string name="settings">设置</string>
     <string name="video">媒体视频</string>
     <string name="about">设备信息</string>
@@ -51,4 +51,7 @@
     <string name="xenon_alert">氙灯文火失败，请重启！！！</string>
     <string name="flow_alert">水流错误</string>
     <string name="power_alert">激光电源故障，请重启！！！</string>
+    <string name="input_serial">输入串口</string>
+    <string name="input_password">请输入密码</string>
+    <string name="password_err">密码错误</string>
 </resources>
