--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Pico Full</string>
+    <string name="app_name" translatable="false">BVLASER</string>
+    <string name="home_name" translatable="false">Pico Full</string>
     <string name="settings">Settings</string>
     <string name="video">Video</string>
     <string name="about">About Device</string>
@@ -52,4 +53,8 @@
     <string name="xenon_alert">氙灯文火失败，请重启！！！</string>
     <string name="flow_alert">水流错误</string>
     <string name="power_alert">激光电源故障，请重启！！！</string>
+    <string name="serial_port">串口</string>
+    <string name="input_serial">输入串口</string>
+    <string name="input_password">请输入密码</string>
+    <string name="password_err">密码错误</string>
 </resources>
