--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,26 +35,26 @@
     <string name="cancel">Cancel</string>
     <string name="password_error">Password Error</string>
     <string name="password_tips">please input 4 digit password</string>
-    <string name="sum">总数</string>
-    <string name="clear">清除</string>
-    <string name="login">登入</string>
-    <string name="open">开启</string>
-    <string name="close">关闭</string>
-    <string name="energy_bg">能量</string>
-    <string name="voltage">电压</string>
+    <string name="sum">total</string>
+    <string name="clear">clear</string>
+    <string name="login">login</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
+    <string name="serial_port">serial port</string>
+    <string name="energy_bg">energy</string>
+    <string name="voltage">voltage</string>
     <string name="energy_value">%1$d</string>
-    <string name="voltage_value" translatable="false">%1$d</string>
-    <string name="alert">警告!!!</string>
-    <string name="temp_err">温度太高了！！！</string>
-    <string name="xenon_err">氙灯文火失败，请重启！！！</string>
-    <string name="flow_err">水流错误！！！</string>
-    <string name="power_err">激光电源故障，请重启！！！</string>
-    <string name="temp_hight">温度太高了！！！</string>
-    <string name="xenon_alert">氙灯文火失败，请重启！！！</string>
-    <string name="flow_alert">水流错误</string>
-    <string name="power_alert">激光电源故障，请重启！！！</string>
-    <string name="serial_port">串口</string>
-    <string name="input_serial">输入串口</string>
-    <string name="input_password">请输入密码</string>
-    <string name="password_err">密码错误</string>
+    <string name="alert">alert!!!</string>
+    <string name="temp_err">temperature too high！！！</string>
+    <string name="xenon_err">Xenon lamp simmer failed, please restart！！！</string>
+    <string name="flow_err">water flow error！！！</string>
+    <string name="power_err">Laser power failure, please restart！！！</string>
+    <string name="temp_hight">temperature too high！！！</string>
+    <string name="xenon_alert">Xenon lamp simmer failed, please restart！！！</string>
+    <string name="flow_alert">water flow error</string>
+    <string name="power_alert">Laser power failure, please restart！！！</string>
+    <string name="input_serial">input serial port</string>
+    <string name="input_password">please enter password</string>
+    <string name="password_err">wrong password</string>
+    <string name="current_serial_port">current serial port： %1$s</string>
 </resources>
