--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -38,6 +38,7 @@
     <string name="clear">清除</string>
     <string name="login">登入</string>
     <string name="open">开启</string>
+    <string name="serial_port">串口</string>
     <string name="close">关闭</string>
     <string name="energy_bg">能量</string>
     <string name="voltage">电压</string>
@@ -54,4 +55,5 @@
     <string name="input_serial">输入串口</string>
     <string name="input_password">请输入密码</string>
     <string name="password_err">密码错误</string>
+    <string name="current_serial_port">当前串口： %1$s</string>
 </resources>
