修改多语言图片

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,59 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="settings">Ajustes</string>
+    <string name="settings">Configuración</string>
     <string name="video">Video</string>
-    <string name="about">Acerca de</string>
+    <string name="about">Información De La Instalación</string>
     <string name="energy">%1$d J/cm²</string>
     <string name="hz">%1$d Hz</string>
-    <string name="pulse">Legumbres &#160;&#160; %1$d</string>
-    <string name="spot">Tamaño del punto   %1$d mm</string>
+    <string name="pulse"> Número De Pulso &#160;&#160; %1$d</string>
+    <string name="spot">Tamaño Del Punto   %1$d mm</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="energy_density">Energía</string>
-    <string name="rate">Tasa</string>
-    <string name="off">Apagado</string>
-    <string name="aod">siempre encendido</string>
-    <string name="flash">Brillante</string>
-    <string name="language">Idioma</string>
+    <string name="energy_density">Densidad de energía</string>
+    <string name="rate">Frecuencia</string>
+    <string name="off">Apagar</string>
+    <string name="aod">Siempre Brillante</string>
+    <string name="flash">Brillar</string>
+    <string name="language">Lenguaje</string>
     <string name="chinese">Chino</string>
     <string name="english">Inglés</string>
     <string name="French">Francés</string>
     <string name="spanish">Español</string>
     <string name="volume">Volumen</string>
-    <string name="buzz">Zumbido</string>
-    <string name="red_light">luz roja</string>
-    <string name="device_model">Device model     PICO_LASER</string>
-    <string name="device_name">设备名称     皮秒激光器</string>
-    <string name="production_date">Production Date</string>
-    <string name="version">Version</string>
-    <string name="input">input</string>
-    <string name="backstage">Backstage</string>
+    <string name="buzz">Zumbador</string>
+    <string name="red_light">Intensidad De Luz Roja</string>
+    <string name="device_model"> Modelo De La Instalación     PICO_LASER</string>
+    <string name="device_name"> Nombre De La Instalación     Picosecond Laser</string>
+    <string name="production_date">Fecha De Fabricación</string>
+    <string name="version">Versión De Software</string>
+    <string name="input">Entrada</string>
+    <string name="backstage">Back-end</string>
     <string name="exit_tips">Exit</string>
     <string name="exit_msg">Are you sure you want to exit the program?</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
-    <string name="password_error">Password Error</string>
-    <string name="password_tips">please input 4 digit password</string>
-    <string name="sum">total</string>
-    <string name="clear">clear</string>
-    <string name="login">login</string>
-    <string name="open">open</string>
-    <string name="close">close</string>
-    <string name="serial_port">serial port</string>
-    <string name="energy_bg">energy</string>
-    <string name="voltage">voltage</string>
+    <string name="password_error">Error de contraseña</string>
+    <string name="password_tips">por favor ingrese la contraseña de 4 dígitos</string>
+    <string name="sum">Total</string>
+    <string name="clear">claro</string>
+    <string name="login">acceso</string>
+    <string name="open">abierto</string>
+    <string name="close">cerca</string>
+    <string name="serial_port">serie</string>
+    <string name="energy_bg">Energía</string>
+    <string name="voltage">Voltaje</string>
     <string name="energy_value">%1$d</string>
-    <string name="alert">alert!!!</string>
-    <string name="temp_err">temperature too high！！！</string>
-    <string name="xenon_err">Xenon lamp simmer failed, please restart！！！</string>
-    <string name="flow_err">water flow error！！！</string>
-    <string name="power_err">Laser power failure, please restart！！！</string>
-    <string name="temp_hight">temperature too high！！！</string>
-    <string name="xenon_alert">Xenon lamp simmer failed, please restart！！！</string>
-    <string name="flow_alert">water flow error</string>
-    <string name="power_alert">Laser power failure, please restart！！！</string>
-    <string name="input_serial">input serial port</string>
-    <string name="input_password">please enter password</string>
-    <string name="password_err">wrong password</string>
-    <string name="current_serial_port">current serial port： %1$s</string>
+    <string name="alert">Advertencia!!!</string>
+    <string name="temp_err">La temperatura está demasiado alta！！！</string>
+    <string name="xenon_err">Fallo en el encendido de la lámpara de xenón, reinicie！！！</string>
+    <string name="flow_err">Error en el flujo de agua！！！</string>
+    <string name="power_err"> Fallo de alimentación del láser, reinicie！！！</string>
+    <string name="temp_hight">temperatura demasiado alta！！！</string>
+    <string name="xenon_alert">Falló la cocción a fuego lento de la lámpara de xenón, reinicie！！！</string>
+    <string name="flow_alert">error de flujo de agua</string>
+    <string name="power_alert">Fallo de alimentación del láser, reinicie！！！</string>
+    <string name="input_serial">puerto serie de entrada</string>
+    <string name="input_password">Por favor, ingrese contraseña</string>
+    <string name="password_err">contraseña incorrecta</string>
+    <string name="current_serial_port">puerto serie actual： %1$s</string>
+    <string name="bs_on">On</string>
+    <string name="bs_off">Off</string>
+    <string name="bs_reset">Eliminar</string>
 </resources>
