--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,59 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="settings">Paramètres</string>
+    <string name="settings">Paramètre</string>
     <string name="video">Vidéo</string>
-    <string name="about">À propos</string>
+    <string name="about">Informations D\'installation</string>
     <string name="energy">%1$d J/cm²</string>
     <string name="hz">%1$d Hz</string>
-    <string name="pulse">Impulsion &#160;&#160; %1$d</string>
-    <string name="spot">Taille du spot   %1$d mm</string>
+    <string name="pulse">Nombre D\'impulsions &#160;&#160; %1$d</string>
+    <string name="spot">Taille Du Spot   %1$d mm</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="energy_density">énergie</string>
-    <string name="rate">Taux</string>
-    <string name="off">Désactivé</string>
-    <string name="aod">Toujours activé</string>
-    <string name="flash">Clignotant</string>
+    <string name="energy_density">Densité D\'énergie</string>
+    <string name="rate">Fréquence</string>
+    <string name="off">Éteindre</string>
+    <string name="aod">Toujours Brillant</string>
+    <string name="flash">Briller</string>
     <string name="language">Langue</string>
     <string name="chinese">Chinois</string>
     <string name="english">Anglais</string>
     <string name="French">Français</string>
     <string name="spanish">Espagnol</string>
     <string name="volume">Volume</string>
-    <string name="buzz">Bourdonner</string>
-    <string name="red_light">lumière rouge</string>
-    <string name="device_model">Device model     PICO_LASER</string>
-    <string name="device_name">设备名称     皮秒激光器</string>
-    <string name="production_date">Production Date</string>
-    <string name="version">Version</string>
-    <string name="input">input</string>
-    <string name="backstage">Backstage</string>
+    <string name="buzz">Avertisseur Sonore</string>
+    <string name="red_light"> Intensité De La Lumière Rouge</string>
+    <string name="device_model">Modèle D\'installation     PICO_LASER</string>
+    <string name="device_name">Nom De L\'installation     Picosecond Laser</string>
+    <string name="production_date"> Date De Fabrication</string>
+    <string name="version">Une Version De Logiciel</string>
+    <string name="input">Interdit</string>
+    <string name="backstage">Back-end</string>
     <string name="exit_tips">Exit</string>
     <string name="exit_msg">Are you sure you want to exit the program?</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
-    <string name="password_error">Password Error</string>
-    <string name="password_tips">please input 4 digit password</string>
-    <string name="sum">total</string>
-    <string name="clear">clear</string>
-    <string name="login">login</string>
-    <string name="open">open</string>
-    <string name="close">close</string>
-    <string name="serial_port">serial port</string>
-    <string name="energy_bg">energy</string>
-    <string name="voltage">voltage</string>
+    <string name="password_error">Erreur de mot de passe</string>
+    <string name="password_tips">veuillez entrer un mot de passe à 4 chiffres</string>
+    <string name="sum">Total</string>
+    <string name="clear">clair</string>
+    <string name="login">connexion</string>
+    <string name="open">ouvrir</string>
+    <string name="close">fermer</string>
+    <string name="serial_port">série</string>
+    <string name="energy_bg">Énergie</string>
+    <string name="voltage">Tension</string>
     <string name="energy_value">%1$d</string>
-    <string name="alert">alert!!!</string>
-    <string name="temp_err">temperature too high！！！</string>
-    <string name="xenon_err">Xenon lamp simmer failed, please restart！！！</string>
-    <string name="flow_err">water flow error！！！</string>
-    <string name="power_err">Laser power failure, please restart！！！</string>
-    <string name="temp_hight">temperature too high！！！</string>
-    <string name="xenon_alert">Xenon lamp simmer failed, please restart！！！</string>
-    <string name="flow_alert">water flow error</string>
-    <string name="power_alert">Laser power failure, please restart！！！</string>
-    <string name="input_serial">input serial port</string>
-    <string name="input_password">please enter password</string>
-    <string name="password_err">wrong password</string>
-    <string name="current_serial_port">current serial port： %1$s</string>
+    <string name="alert">Avertissement!!!</string>
+    <string name="temp_err">La température est trop élevée！！！</string>
+    <string name="xenon_err">Panne d\'allumage de la lampe au xénon, veuillez réinitialiser！！！</string>
+    <string name="flow_err">Erreur de débit d\'eau！！！</string>
+    <string name="power_err">Panne de courant laser, veuillez redémarrer！！！</string>
+    <string name="temp_hight">température trop élevée！！！</string>
+    <string name="xenon_alert">Le mijotage de la lampe au xénon a échoué, veuillez redémarrer！！！</string>
+    <string name="flow_alert">erreur de débit d\'eau!!!</string>
+    <string name="power_alert">Panne de courant laser, veuillez redémarrer！！！</string>
+    <string name="input_serial">port série d\'entrée</string>
+    <string name="input_password">veuillez entrer le mot de passe</string>
+    <string name="password_err">mauvais mot de passe</string>
+    <string name="current_serial_port">port série actuel： %1$s</string>
+    <string name="bs_on">On</string>
+    <string name="bs_off">Off</string>
+    <string name="bs_reset">Éliminer</string>
 </resources>
